--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="./style.css">
+	<link rel="shortcut icon" href="playstation-triangle-icon.png">
 	<script src="./adventure.js" charset="utf-8"></script>
 	<!-- <script src="./your-script.js" charset="utf-8"></script> -->
 	<script src="./example-game.js" charset="utf-8"></script>
@@ -35,6 +36,5 @@
 		</section>
 		<section id="messages">Nothing happened.</section>
 	</main>
-	<button id="refresh">Refresh</button>
 </body>
 </html>
