Several minor adjustments, including blank game file

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 			</aside>
 		</div>
 		<section>
-			Input command and press enter. <div class="popup-help">Help!</div>
-			<div class="popup">
-				Try entering an action and an object. For example, "get key" if there is a key lying around. Some common examples are "go out", "climb up", "look at door" and so on. Objects that you can interact with are <span class="keyword">highlighted</span>.
+			Input command and press enter.
+			<div class="popup-help">Help!
+				<div class="popup">
+					Try entering an action and an object. For example, "get key" if there is a key lying around. Some common examples are "go out", "climb up", "look at door" and so on. Objects that you can interact with are <span class="keyword">highlighted</span>.
+				</div>
 			</div>
 			<textarea id="commands" rows="5"></textarea>
 		</section>
